--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,8 @@ deep-translator==1.9.1
 playsound==1.2.2
 requests==2.26.0
 Werkzeug==2.0.1
-pyttsx3==2.90 
+pyttsx3==2.90
+PyAudio==0.2.13
+numpy==1.21.0
+sounddevice==0.4.4
+soundfile==0.10.3.post1 
