--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,10 @@ services:
   - type: web
     name: linguasync
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: chmod +x build.sh && ./build.sh
     startCommand: gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
-        value: 3.9.0 
+        value: 3.9.0
+      - key: FLASK_ENV
+        value: production 
