--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-Flask==2.0.1
-gunicorn==20.1.0
-python-dotenv==0.19.0
-SpeechRecognition==3.8.1
-gtts==2.2.3
-deep-translator==1.9.1
-requests==2.26.0
-Werkzeug==2.0.1 
+Flask==2.3.3
+gunicorn==21.2.0
+python-dotenv==1.0.0
+SpeechRecognition==3.10.0
+gtts==2.4.0
+deep-translator==1.11.4
+requests==2.31.0
+Werkzeug==2.3.7
+pydub==0.25.1
+cachetools==5.3.1
